syntax = "proto3";

option java_multiple_files = true;
option java_package = "goapiboilerplate.grpc.user";
option java_outer_classname = "UserProto";

package proto;

import "google/protobuf/empty.proto";

// UserService handles commands dispatch and user view actions
service UserService {
  rpc DispatchUserCommand (DispatchUserCommandRequest) returns (google.protobuf.Empty);
  rpc GetUser (GetUserRequest) returns (User);
  rpc ListUsers (ListUserRequest) returns (ListUserResponse);
}

// DispatchUserCommandRequest is passed when dispatching
message DispatchUserCommandRequest {
  string name = 1;
  bytes payload = 2;
}

// User object
message User {
  string id = 1;
  string email = 2;
  string facebookId = 3;
  string googleId = 4;
}

// GetUserRequest is a request data to read user
message GetUserRequest {
  string id = 1;
}

// ListUserRequest is a request data to read all user for a given page
message ListUserRequest {
  int64 page = 1;
  int64 limit = 2;
}

// ListUserResponse list of all users
message ListUserResponse {
  repeated User users = 1;
  int64 page = 2;
  int64 limit = 3;
  int64 total = 4;
}
